--- a/index.html
+++ b/index.html
@@ -7,11 +7,193 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" 
     referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/mobile.css">
     <link rel="stylesheet" href="assets/style/style.css">
     <script src="assets/script/script.js" defer></script>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo">
+            <img src="assets/images/logo.svg" alt="logo">
+        </div>
+        <ul class="nav-links-desktop">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Careers</a></li>
+        </ul>
+
+        <button class="mainButton hideButton">
+            Request Invite
+        </button>
+
+        <div class="mobile-menu" id="mobile-menu">
+            <button class="close" id="closeButton">
+                <img src="assets/images/icon-close.svg" alt="icon-close">
+            </button>
+
+            <ul class="nav-links-mobile">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Careers</a></li>
+            </ul>
+        </div>
+        <button class="hamburguer" id="hamburguerButton">
+            <img src="assets/images/icon-hamburger.svg" alt="icon-hamburger">
+        </button>
+    </nav>
+
+    <section class="area-1">
+        <div class="content">
+            <h1> Next generation digital banking</h1>
+            <p class="">
+                Take your financial life online. 
+                Your Easybank account will be a one-stop-shop 
+                for spending, saving, budgeting, investing, and much more.
+            </p>
+
+            <button class="mainButton">
+                Request Invite
+            </button>
+        </div>
+        <div class="img">
+            <img src="assets/images/image-mockups.png" alt="mockups">
+        </div>
+    </section>
+
+    <section class="description-bank">
+        <h1>
+            Why choose Easybank?
+        </h1>
+
+        <p class="">
+            We leverage Open Banking to 
+            turn your bank account 
+            into your financial hub. Control 
+            your finances like never before.
+        </p>
+    </section>
+
+   <section class="easybank">
+    <div class="options">
+        <h4>Online Bank</h4>
+        <img src="assets/images/icon-online.svg" alt="online bank">
+        <p>
+            Our modern web and mobile applications allow you to keep track of your finances 
+            wherever you are in the world.
+        </p>
+    </div>
+
+    <div class="options">
+        <h4>Fast Onboarding</h4>
+        <img src="assets/images/icon-onboarding.svg" alt="Fast Onboarding">
+        <p>
+            We don’t do branches. Open your account in minutes online and start taking control 
+            of your finances right away.
+        </p>
+    </div>
+
+    <div class="options">
+        <h4>Simple Budgeting</h4>
+        <img src="assets/images/icon-budgeting.svg" alt="budgeting">
+        <p>
+            See exactly where your money goes each month. Receive notifications when you’re 
+            close to hitting your limits.
+        </p>
+    </div>
+
+    <div class="options">
+        <h4>Open API</h4>
+        <img src="assets/images/icon-api.svg" alt="API">
+        <p>
+            Manage your savings, investments, pension, and much more from one account. Tracking 
+            your money has never been easier.
+        </p>
+    </div>
+   </section>
+
+   <article>
+        <div class="articles">
+            <img src="assets/images/image-currency.jpg" alt="currency">
+            <span>By Claire Robinson</span>
+            <a href="#">
+                Receive money in any currency with no fees
+            </a>
+            <p>
+                The world is getting smaller and we’re becoming more mobile. So why should you be 
+                forced to only receive money in a single …
+            </p>
+        </div>
+
+        <div class="articles">
+            <img src="assets/images/image-restaurant.jpg" alt="restaurant">
+            <span>By Wilson Hutton</span>
+            <a href="#">
+                Treat yourself without worrying about money
+            </a>
+            <p>
+                Our simple budgeting feature allows you to separate out your spending and set 
+                realistic limits each month. That means you …
+            </p>
+        </div>
+
+        <div class="articles">
+            <img src="assets/images/image-plane.jpg" alt="plane">
+            <span>By Wilson Hutton</span>
+            <a href="#">
+                Take your Easybank card wherever you go
+            </a>
+            <p>
+                We want you to enjoy your travels. 
+                This is why we don’t charge any fees on purchases 
+                while you’re abroad. We’ll even show you …
+            </p>
+        </div>
+
+        <div class="articles">
+            <img src="assets/images/image-confetti.jpg" alt="confetti">
+            <span>By Wilson Hutton</span>
+            <a href="#">
+                Our invite-only Beta accounts are now live!
+            </a>
+            <p>
+                After a lot of hard work by the whole team, 
+                we’re excited to launch our closed beta. 
+                It’s easy to request an invite through the site ...
+            </p>
+        </div>
+   </article>
+
+   <footer>
+        <div class="icons-logo">
+            <div class="logo-footer">
+                <img src="assets/images/logo.svg" alt="logo">
+            </div>
+            <div class="icons">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </div>
+        
+        <div class="links-footer">
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+            <a href="#">Blog</a>
+        </div>
+
+        <div class="links-footer">
+            <a href="#">Careers</a>
+            <a href="#">Support</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+
+        <button>Request Invite</button>
+   </footer>
+
 </body>
 </html>
