--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#">Careers</a></li>
         </ul>
 
-        <button class="mainButton hideButton">
+        <button class="mainButton">
             Request Invite
         </button>
 
@@ -40,15 +40,15 @@
                 <li><a href="#">Careers</a></li>
             </ul>
         </div>
-        <button class="hamburguer" id="hamburguerButton">
+        <button class="hamburger" id="hamburgerButton">
             <img src="assets/images/icon-hamburger.svg" alt="icon-hamburger">
         </button>
     </nav>
 
     <section class="area-1">
         <div class="content">
-            <h1> Next generation digital banking</h1>
-            <p class="">
+            <h1 class="titleColor"> Next generation digital banking</h1>
+            <p class="fontColor">
                 Take your financial life online. 
                 Your Easybank account will be a one-stop-shop 
                 for spending, saving, budgeting, investing, and much more.
@@ -63,65 +63,66 @@
         </div>
     </section>
 
+
+   <section class="area-2">
     <section class="description-bank">
-        <h1>
+        <h1 class="titleColor titleBank">
             Why choose Easybank?
         </h1>
 
-        <p class="">
+        <p class="fontColor">
             We leverage Open Banking to 
             turn your bank account 
             into your financial hub. Control 
             your finances like never before.
         </p>
     </section>
-
-   <section class="easybank">
-    <div class="options">
-        <h4>Online Bank</h4>
-        <img src="assets/images/icon-online.svg" alt="online bank">
-        <p>
-            Our modern web and mobile applications allow you to keep track of your finances 
-            wherever you are in the world.
-        </p>
-    </div>
-
-    <div class="options">
-        <h4>Fast Onboarding</h4>
-        <img src="assets/images/icon-onboarding.svg" alt="Fast Onboarding">
-        <p>
-            We don’t do branches. Open your account in minutes online and start taking control 
-            of your finances right away.
-        </p>
-    </div>
-
-    <div class="options">
-        <h4>Simple Budgeting</h4>
-        <img src="assets/images/icon-budgeting.svg" alt="budgeting">
-        <p>
-            See exactly where your money goes each month. Receive notifications when you’re 
-            close to hitting your limits.
-        </p>
-    </div>
-
-    <div class="options">
-        <h4>Open API</h4>
-        <img src="assets/images/icon-api.svg" alt="API">
-        <p>
-            Manage your savings, investments, pension, and much more from one account. Tracking 
-            your money has never been easier.
-        </p>
-    </div>
+       <section class="easybank">
+        <div class="options">
+            <img src="assets/images/icon-online.svg" alt="online bank">
+            <h4 class="titleColor">Online Bank</h4>
+            <p class="fontColor">
+                Our modern web and mobile applications allow you to keep track of your finances
+                wherever you are in the world.
+            </p>
+        </div>
+        <div class="options">
+            <img src="assets/images/icon-onboarding.svg" alt="Fast Onboarding">
+            <h4 class="titleColor">Fast Onboarding</h4>
+            <p class="fontColor">
+                We don’t do branches. Open your account in minutes online and start taking control
+                of your finances right away.
+            </p>
+        </div>
+        <div class="options">
+            <img src="assets/images/icon-budgeting.svg" alt="budgeting">
+            <h4 class="titleColor">Simple Budgeting</h4>
+            <p class="fontColor">
+                See exactly where your money goes each month. Receive notifications when you’re
+                close to hitting your limits.
+            </p>
+        </div>
+        <div class="options">
+            <img src="assets/images/icon-api.svg" alt="API">
+            <h4 class="titleColor">Open API</h4>
+            <p class="fontColor">
+                Manage your savings, investments, pension, and much more from one account. Tracking
+                your money has never been easier.
+            </p>
+        </div>
+       </section>
    </section>
+
+   <h2>Latest Articles</h2>
 
    <article>
         <div class="articles">
             <img src="assets/images/image-currency.jpg" alt="currency">
-            <span>By Claire Robinson</span>
+            <span class="fontColor">By Claire Robinson</span>
             <a href="#">
                 Receive money in any currency with no fees
             </a>
-            <p>
+            <p class="fontColor">
                 The world is getting smaller and we’re becoming more mobile. So why should you be 
                 forced to only receive money in a single …
             </p>
@@ -129,11 +130,11 @@
 
         <div class="articles">
             <img src="assets/images/image-restaurant.jpg" alt="restaurant">
-            <span>By Wilson Hutton</span>
-            <a href="#">
+            <span class="fontColor">By Wilson Hutton</span>
+            <a href="#" class="titleColor">
                 Treat yourself without worrying about money
             </a>
-            <p>
+            <p class="fontColor">
                 Our simple budgeting feature allows you to separate out your spending and set 
                 realistic limits each month. That means you …
             </p>
@@ -141,11 +142,11 @@
 
         <div class="articles">
             <img src="assets/images/image-plane.jpg" alt="plane">
-            <span>By Wilson Hutton</span>
-            <a href="#">
+            <span class="fontColor">By Wilson Hutton</span>
+            <a href="#" class="titleColor">
                 Take your Easybank card wherever you go
             </a>
-            <p>
+            <p class="fontColor">
                 We want you to enjoy your travels. 
                 This is why we don’t charge any fees on purchases 
                 while you’re abroad. We’ll even show you …
@@ -155,7 +156,7 @@
         <div class="articles">
             <img src="assets/images/image-confetti.jpg" alt="confetti">
             <span>By Wilson Hutton</span>
-            <a href="#">
+            <a href="#" class="titleColor">
                 Our invite-only Beta accounts are now live!
             </a>
             <p>
