--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
        </section>
    </section>
 
-   <h2>Latest Articles</h2>
+   <h2 class="articleTitle titleColor">Latest Articles</h2>
 
    <article>
         <div class="articles">
@@ -155,11 +155,11 @@
 
         <div class="articles">
             <img src="assets/images/image-confetti.jpg" alt="confetti">
-            <span>By Wilson Hutton</span>
+            <span class="fontColor">By Wilson Hutton</span>
             <a href="#" class="titleColor">
                 Our invite-only Beta accounts are now live!
             </a>
-            <p>
+            <p class="fontColor">
                 After a lot of hard work by the whole team, 
                 we’re excited to launch our closed beta. 
                 It’s easy to request an invite through the site ...
@@ -170,7 +170,7 @@
    <footer>
         <div class="icons-logo">
             <div class="logo-footer">
-                <img src="assets/images/logo.svg" alt="logo">
+                <img src="assets/images/logo - footer.svg" alt="logo">
             </div>
             <div class="icons">
               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -193,7 +193,10 @@
             <a href="#">Privacy Policy</a>
         </div>
 
-        <button>Request Invite</button>
+        <div class="copy">
+            <button class="mainButton">Request Invite</button>
+            <span class="easyCopy">© Easybank. All Rights Reserved</span>
+        </div>
    </footer>
 
 </body>
