--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" 
     referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/style/mobile.css">
     <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="assets/style/mobile.css">
     <script src="assets/script/script.js" defer></script>
 </head>
 <body>
@@ -24,11 +24,11 @@
             <li><a href="#">Careers</a></li>
         </ul>
 
-        <button class="mainButton">
+        <button class="mainButton hidenButton">
             Request Invite
         </button>
 
-        <div class="mobile-menu" id="mobile-menu">
+        <div class="mobile-menu" id="mobileMenu">
             <button class="close" id="closeButton">
                 <img src="assets/images/icon-close.svg" alt="icon-close">
             </button>
