--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="articles">
             <img src="assets/images/image-currency.jpg" alt="currency">
             <span class="fontColor">By Claire Robinson</span>
-            <a href="#">
+            <a href="#" class="titleColor">
                 Receive money in any currency with no fees
             </a>
             <p class="fontColor">
